# Otus__cpp-hw-02

./: README.md
build-homework_02-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-homework_02-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0faeed119e1c28054a34.json  cmakeFiles-v1-aec587ab43dfc2147d83.json
build-homework_02-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-83de04bcdbe1110b551f.json  directory-.-Debug-ef146ae19bfbb38ac56f.json  index-2023-04-08T09-35-41-0127.json  target-homework_02-Debug-fb2f8023d2b1d473b9e9.json
build-homework_02-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-homework_02-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.0FD53F6775BEA6A4.idx  _mingw.h.28F154B407C9331C.idx  _mingw_ddk.h.0D41AD45FA1D0D2D.idx  _mingw_mac.h.5A06FAFC3176EF67.idx  _mingw_off_t.h.AC1A06534011396A.idx  _mingw_secapi.h.829B757F0213CC69.idx  _mingw_stat64.h.5F20F2093CAF5157.idx  _timeval.h.A506A1FD9120D8C4.idx  alloc_traits.h.3A011E5340DEF804.idx  alloc_traits.h.DB212FBA69378F95.idx  allocator.h.0F535ED7AAEF8B58.idx  assertions.h.501EB6BEBBA92110.idx  atomic_word.h.52D3D9442508459B.idx  atomicity.h.593751D4AE9E03AC.idx  basic_ios.h.B725F23AAC0B474A.idx  basic_ios.tcc.5F1264DE06F5734B.idx  basic_string.h.56BE05167900B8E7.idx  basic_string.tcc.E15F44872A4BCC7E.idx  binders.h.DF298BA7287CBE4E.idx  (+121 more)
homework_02/: CMakeLists.txt  example.cpp  main.cpp  toDoMove.cpp
